syntax = "proto3";

package polyglot;

option java_outer_classname = "HelloProto";

message HelloRequest {
  string recipient = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  rpc SayHelloStream (HelloRequest) returns (stream HelloResponse) {}
}
